fix: adjust scrollbar styles for Chromium browsers
- Address scrollbar appearance issues in Chromium browsers
- Ensure that Firefox scrollbar styles only apply to Firefox

Changes summary:
    - Adjusted scrollbar styles specifically for Chromium browsers to resolve appearance issues.
    - Confirmed that Firefox scrollbar styles are only applied to Firefox for consistent appearance across browsers.

--- a/src/sass/global/_base.scss
+++ b/src/sass/global/_base.scss
@@ -16,23 +16,15 @@ a {
 }
 
 /* scrollbar-color for For Firefox */
-html {
-	scrollbar-color: var(--c-scrollbar-thumb) var(--c-scrollbar-track); // second parameter (transparent) is for bg-thumb
+@-moz-document url-prefix() {
+	html {
+		scrollbar-color: var(--c-scrollbar-thumb) var(--c-scrollbar-track); // second parameter (transparent) is for bg-thumb
+	}
 }
-
-/* scrollbar-thumb-color for Chromium-based browsers */
+// /* scrollbar-thumb-color for Chromium-based browsers */
 ::-webkit-scrollbar-thumb {
 	background-color: var(--c-scrollbar-thumb) !important;
 }
-
-/* scrollbar-track for Chromium-based browsers */
-// ::-webkit-scrollbar-track {
-//     // background-color: red !important;
-
-//     &:hover {
-//         background-color: var(--c-surface-2) !important;
-//     }
-// }
 
 ::selection {
 	background-color: hsla(var(--accent-hsl) / 0.5) !important;
